// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can build a plugin 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build a plugin 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 214,
      "type": "file",
    },
    Object {
      "name": "myplugin.js",
      "size": 327,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 499,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 1520,
  "type": "dir",
}
`;

exports[`can build with just a schema folder of modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with just a schema folder of modules 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "name": "a.js",
          "size": 213,
          "type": "file",
        },
      ],
      "name": "schema",
      "size": 213,
      "type": "dir",
    },
    Object {
      "name": "start.js",
      "size": 509,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 722,
  "type": "dir",
}
`;

exports[`can build with just a schema module 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with just a schema module 2`] = `
Object {
  "children": Array [
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 507,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 720,
  "type": "dir",
}
`;

exports[`can build with schema + app modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with schema + app modules 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 148,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 841,
  "type": "dir",
}
`;

exports[`can nest modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can nest modules 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 148,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 841,
  "type": "dir",
}
`;

exports[`exits 1 if app does not type check 1`] = `
Object {
  "command": "yarn -s nexus-future build",
  "exitCode": 1,
  "signal": null,
  "stderr": "Error: [96mapp.ts[0m:[93m1[0m:[93m7[0m - [91merror[0m[90m TS2322: [0mType '\\"bar\\"' is not assignable to type 'number'.

[7m1[0m const foo: number =  \\"bar\\"
[7m [0m [91m      ~~~[0m

    at Object.compile (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/utils/tsc.js:107:15)
    at parse (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/cli/commands/build.js:66:17)
    at async main (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/cli/index.js:77:20)
",
  "stdout": "Generating Nexus artifacts ...
Compiling ...
",
}
`;

exports[`exits 1 if typegen errors out 1`] = `
Object {
  "command": "yarn -s nexus-future build",
  "exitCode": 1,
  "signal": null,
  "stderr": "Error: 
      Nexus artifact generation failed with exit code \\"1\\". The following stderr was captured:

          app.ts(1,12): error TS1110: Type expected.
app.ts(1,14): error TS1134: Variable declaration expected.


    
    at Object.generateArtifacts (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/utils/artifact-generation.js:21:23)
    at parse (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/cli/commands/build.js:55:23)
    at async main (/Users/jasonkuhrt/projects/graphql-nexus/nexus-future/dist/cli/index.js:77:20)
",
  "stdout": "Generating Nexus artifacts ...
",
}
`;
